add sidebar, try to hide navbar when screen is large

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,3 +57,11 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="{{ "/js/clean-blog.min.js " | prepend: site.baseurl }}"></script>
+
+<!-- Menu Toggle Script -->
+<script>
+$("#menu-toggle").click(function(e) {
+    e.preventDefault();
+    $("#wrapper").toggleClass("toggled");
+    });
+</script>
