--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,11 +5,27 @@
 
 <body>
 
-    {% include nav.html %}
+    <div id="wrapper">
+        {% include sidebar.html %}
+        {% include nav.html %}
 
-    {{ content }}
+        <!-- Page Content -->
+        <div id="page-content-wrapper">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-12">
+                        {{ content }}
+                        <a href="#menu-toggle" class="btn btn-default" id="menu-toggle">Toggle Menu</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /#page-content-wrapper -->
 
-    {% include footer.html %}
+        {% include footer.html %}
+    </div>
+
+    
 
 </body>
 
