--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -16,7 +16,10 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="{{ site.baseurl }}/">Home</a>
+                    <a href="{{ site.baseurl }}/">Blog</a>
+                </li>
+                <li>
+                    <a href="/statbook">My Stat Book</a>
                 </li>
                 {% for page in site.pages %}
                 <li>
