--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -60,32 +60,11 @@ hr.small {
 }
 @media only screen and (min-width: 768px) {
   .navbar-custom {
-    background: transparent;
-    border-bottom: 1px solid transparent;
-  }
-  .navbar-custom .navbar-brand {
-    color: white;
-    padding: 20px;
-  }
-  .navbar-custom .navbar-brand:hover,
-  .navbar-custom .navbar-brand:focus {
-    color: rgba(255, 255, 255, 0.8);
-  }
-  .navbar-custom .nav li a {
-    color: white;
-    padding: 20px;
-  }
-  .navbar-custom .nav li a:hover,
-  .navbar-custom .nav li a:focus {
-    color: rgba(255, 255, 255, 0.8);
-  }
-}
-@media only screen and (min-width: 1170px) {
-  .navbar-custom {
-    /* Remove navbar when screen is large. The default is to show when scroll up */
+    /* Remove navbar when screen is larger than phone screen. The default is to show when scroll up */
     display: none;
   }
 }
+
 .intro-header {
   background-color: #808080;
   background: no-repeat center center;
