add js to sidebar. Now when scroll down past the post header, the sidebar will hide

--- a/css/sidebar.css
+++ b/css/sidebar.css
@@ -14,10 +14,6 @@
     transition: all 0.5s ease;
 }
 
-#wrapper.toggled {
-    padding-left: 250px;
-}
-
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
@@ -33,18 +29,9 @@
     transition: all 0.5s ease;
 }
 
-#wrapper.toggled #sidebar-wrapper {
-    width: 250px;
-}
-
 #page-content-wrapper {
     width: 100%;
     padding: 0px;
-}
-
-#wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
 }
 
 /* Sidebar Styles */
@@ -100,7 +87,7 @@
         padding-left: 250px;
     }
 
-    #wrapper.toggled {
+    #wrapper.hide-sidebar {
         padding-left: 0;
     }
 
@@ -108,7 +95,7 @@
         width: 250px;
     }
 
-    #wrapper.toggled #sidebar-wrapper {
+    #wrapper.hide-sidebar #sidebar-wrapper {
         width: 0;
     }
 
@@ -116,9 +103,15 @@
         padding: 0px;
     }
 
-    #wrapper.toggled #page-content-wrapper {
+    #wrapper.hide-sidebar #page-content-wrapper {
         position: relative;
         margin-right: 0;
+    }
+}
+
+@media(max-width:768px) {
+    #sidebar-wrapper {
+        display: none;
     }
 }
 
