--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,11 +15,18 @@
                 <div class="row">
                     <div class="col-lg-12">
                         {{ content }}
+                        <!-- Post comment -->
+                        {% if page.comments %}
+                            {% include disqus.html %}
+                        {% endif %}
                     </div>
                 </div>
             </div>
+
         </div>
         <!-- /#page-content-wrapper -->
+
+        
 
         {% include footer.html %}
     </div>
