--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,15 +10,15 @@
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Bootstrap Core CSS -->
-    <link rel="stylesheet" href="{{ "/css/bootstrap.min.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "css/bootstrap.min.css" | prepend: site.baseurl }}">
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="{{ "/css/clean-blog.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/css/sidebar.css" | prepend: site.baseurl }}">
-    <link rel="stylesheet" href="{{ "/css/math.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "css/clean-blog.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "css/sidebar.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "css/math.css" | prepend: site.baseurl }}">
 
     <!-- Pygments Github CSS -->
-    <link rel="stylesheet" href="{{ "/css/syntax.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "css/syntax.css" | prepend: site.baseurl }}">
 
     <!-- Custom Fonts -->
     <link href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css" media="all" rel="stylesheet" type="text/css">
